--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,11 +1,11 @@
-version: "3"
+version: '3'
 services:
   api:
     build: ./api
     ports:
       - 1337:80
-    volumes: 
-      - "./api:/var/www/html"
+    volumes:
+      - './api:/var/www/html'
   db:
     image: mariadb
     environment:
@@ -19,4 +19,4 @@ services:
   adminer:
     image: adminer
     ports:
-      - 8888:8080
+      - 8885:8080
